fixed missing horizontal scrollbar with dynamic iframe resize

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,8 +19,8 @@
 
 /* school iframe*/
 iframe#school {
+	overflow: scroll;
 	border: none;
 	width: 50%;
-	height: 100%;
 	float: left;
 }
